    * Implemented simple shadows (and removed shadow images from distribution)
    * Fixed bug #3346 "double as data"
    * Fixed a problem with normal multi-data bar charts not displaying expected bar width
    * Fixed problem with legends when overlayed    
    * Fixed axis not displaying labels after resetting driver
    * Fixed problem in SVG driver with vertical texts
    * Changed which changes API causing minor BC breaks
        - Renamed Image_Graph_Plot_Bar::barWidth() to Image_Graph_Plot_Bar::setBarWidth()
        - Renamed Image_Graph_Plot_Bar::spacing() to Image_Graph_Plot_Bar::setSpacing()
        - Removed Image_Graph_Layout_Plotarea, it being completely obsolete with introduction of Image_Graph_Axis::setTitle()
    * Performance optimizations

Version 0.3.0-dev4 [2005-Jan-28] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Fixed problem with logarithmic axis causing an infinite loop

Version 0.3.0-dev3 [2005-Jan-27] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added possibility to invert axis direction, fx. minimum at top or bottom
    * Added methods to handle axis label customization (Image_Graph_Axis::setLabelOption() and Image_Graph_Axis::setLabelOptions())
    * Minor change to the way GD driver(s) calculate height (so that fx. x-axis labels appear printed on the same baseline)
    * Fixed axis so that forceMinimum() works with axis intersection
    * Fixed PDF (PDFlib) driver to display images correctly
    * Fixed factory method class name alias 'vector', tried to create Image_Graph_Dataset_Vector instead of Image_Graph_Dataset_VectorFunction
    * Fixed a minor problem in category axis when adding more that one point with the same value, i.e. ('A', 10), ('A', 20)
    * Fixed problem with grids on category axis
    * Added possiblitity to add simple colors to Image_Graph_Line_Array
    * Added id tags for line styles
    * Performance optimization/tuning (axis, elements)