@@ -95,12 +95,12 @@ class Image_Graph_Axis_Marker_Line extends Image_Graph_Grid
         reset($secondaryPoints);
         list ($id, $previousSecondaryValue) = each($secondaryPoints);
         while (list ($id, $secondaryValue) = each($secondaryPoints)) {
-            if ($this->_primaryAxis->_type == IMAGE_GRAPH_AXIS_Y) {
-                $p1 = array ('X' => $secondaryValue, 'Y' => $this->_value);
-                $p2 = array ('X' => $previousSecondaryValue, 'Y' => $this->_value);
-            } else {
+            if ($this->_primaryAxis->_type == IMAGE_GRAPH_AXIS_X) {
                 $p1 = array ('X' => $this->_value, 'Y' => $secondaryValue);
                 $p2 = array ('X' => $this->_value, 'Y' => $previousSecondaryValue);
+            } else {
+                $p1 = array ('X' => $secondaryValue, 'Y' => $this->_value);
+                $p2 = array ('X' => $previousSecondaryValue, 'Y' => $this->_value);
             }
 
             $x1 = $this->_pointX($p1);
