@@ -13,10 +13,13 @@ Version 0.x.y-state [2005-xxx-yy] - Jesper Veggerby <pear.nosey@veggerby.dk>
     * Fixed problem with legends when overlayed    
     * Fixed axis not displaying labels after resetting driver
     * Fixed problem in SVG driver with vertical texts
+    * Fixed a problem with line axis marker on a secondary y-axis displaying vertically instead of horizontally
+    * Changed the way coordinates are calculated when adding titles to non-layout objects
     * Changed which changes API causing minor BC breaks
         - Renamed Image_Graph_Plot_Bar::barWidth() to Image_Graph_Plot_Bar::setBarWidth()
         - Renamed Image_Graph_Plot_Bar::spacing() to Image_Graph_Plot_Bar::setSpacing()
         - Removed Image_Graph_Layout_Plotarea, it being completely obsolete with introduction of Image_Graph_Axis::setTitle()
+    * Updated header comment blocks to conform to new standards as specified by RFC
     * Performance optimizations
 
 Version 0.3.0-dev4 [2005-Jan-28] - Jesper Veggerby <pear.nosey@veggerby.dk>
